# advent_2021_c

./: CMakeLists.txt  readme.md
.github/workflows/: cmake.yml
day_1/: Makefile  main.c
src/: file.c  file.h  main.c  main.cc
src/day1/part2/: helpers.c  helpers.h  helpers_test.cc  main.c
src/day2/: part1.c  point.c  point.h  point_test.cc
src/day3/: helpers.c  helpers.h  part1.c  part1_test.cc
src/day4/: part1.h
src/day4/test/: test.cc
src/day5/: part1.cc  part1.h
src/day5/test/: day5_test.cc
